--- a/package.json
+++ b/package.json
@@ -1,24 +1,52 @@
 {
-  "name": "frontend-applications",
-  "version": "1.0.0",
-  "description": "Volkenkunde Application",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/robert-hoekstra/frontend-applications.git"
-  },
-  "keywords": [
-    "Vue",
-    "Volkenkunde",
-    "Application"
-  ],
-  "author": "Robert Hoekstra",
+  "name": "ember-quickstart",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Small description for ember-quickstart goes here",
+  "repository": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/robert-hoekstra/frontend-applications/issues"
+  "author": "",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
   },
-  "homepage": "https://github.com/robert-hoekstra/frontend-applications#readme"
+  "scripts": {
+    "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test"
+  },
+  "devDependencies": {
+    "@ember/optional-features": "^1.0.0",
+    "babel-eslint": "^10.0.3",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-cli": "~3.13.1",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-babel": "^7.11.1",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^4.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.3",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-data": "~3.13.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.7.0",
+    "ember-load-initializers": "^2.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^4.5.1",
+    "ember-resolver": "^5.3.0",
+    "ember-source": "~3.13.0",
+    "ember-welcome-page": "^4.0.0",
+    "eslint-plugin-ember": "^7.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.9.0"
+  },
+  "engines": {
+    "node": "8.* || >= 10.*"
+  }
 }
